@@ -13,3 +13,12 @@ int main(int argc, char *argv[]) {
 
   return QApplication::exec();
 }
+
+// DEV: Load your own sound file
+// DEV: Use millisecond precision, e.g. 00:00:000 on clock and displays.
+/* BUG: Fix naive QTimer.
+ * Currently when you pause the timer and restart the match with play button again, a new timer is
+ * created to fire again in 1s. Really it should just continue from time remaining on the previous timer,
+ * otherwise user can just keep hitting play/pause every .5 seconds and the screen would never update.
+ */
+
